# amplifier-bundle-imagen

./: .gitignore  README.md  bundle.md
agents/: image-director.md  image-editor.md  image-prompt-engineer.md  image-researcher.md
behaviors/: image-editing.yaml  image-generation.yaml  imagegen.yaml
bundles/: standalone-local.yaml  with-anthropic.yaml
context/: imagen-awareness.md
docs/: CREATIVE_DIRECTION_GUIDE.md  EDIT_WORKFLOW_GUIDE.md  MODEL_SELECTION_GUIDE.md  PROMPT_ENGINEERING_GUIDE.md  PROVIDER_COMPARISON.md  REFERENCE_IMAGE_DISCIPLINE.md  TOOL_REFERENCE.md  VISUAL_ANALYSIS_GUIDE.md
modules/tool-imagen/: README.md  pyproject.toml
modules/tool-imagen/amplifier_module_tool_imagen/: __init__.py
modules/tool-imagen/tests/: test_tool_imagen.py
project-context/: HANDOFF.md
skills/design-visual-asset/: SKILL.md
