[project]
name = "amplifier-module-tool-imagen"
version = "1.0.0"
description = "Amplifier tool module exposing imagen-mcp multi-provider image generation (OpenAI gpt-image-2 + Google Gemini Nano Banana Pro) as native Amplifier tools."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Michael Jabbour" },
]

dependencies = []

[project.optional-dependencies]
direct = [
    "fastmcp>=2.12.5,<3.0",
    "pydantic>=2.12.3",
    "httpx>=0.24.0",
    "google-genai>=1.52.0",
    "pillow>=10.4.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "amplifier-core",
]

[project.entry-points."amplifier.modules"]
tool-imagen = "amplifier_module_tool_imagen:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_tool_imagen"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
